[EME][Mac] Crash in [AVStreamSession addStreamDataParser:]; uncaught exception https://bugs.webkit.org/show_bug.cgi?id=153495

Reviewed by Eric Carlson.

When AVContentKeySession is not available, fall back to pre-AVContentKeySession behavior;
namely, immediately create an AVStreamSession object in
willProvideContentKeyRequestInitializationData, rather than waiting for didProvide.

* platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:
(WebCore::SourceBufferPrivateAVFObjC::willProvideContentKeyRequestInitializationDataForTrackID):


Canonical link: https://commits.webkit.org/171563@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195609 268f45cc-cd09-0410-ab3c-d52691b4dbfc